[package]
name = "Reaper-Docs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
pulldown-cmark = "0.12.2"
glob = "0.3"
chrono = "0.4"
futures = "0.3"
thiserror = "2.0.3"
anyhow = "1.0"